# Dungeons3D

./: CMakeLists.txt  README.md  make_vs.bat  vcxproj.user.in
VS_Source/: Dungeons3D.sln
VS_Source/Dungeons3D/: Dungeons3D.vcxproj  Dungeons3D.vcxproj.filters  resource.h
VS_Source/Dungeons3D/Resources/Meshes/: LargeGimbal.mesh  RedCylinder.mesh  SmallGimbal.mesh  Treetrunk.mesh  UnitCone.mesh  UnitCube.mesh  UnitCubeColor.mesh  UnitCylinder.mesh  UnitPlane.mesh  wizard.3DS
VS_Source/Dungeons3D/Resources/Meshes/Scripts/: GenCylinder.py
VS_Source/Dungeons3D/Resources/Shaders/: AmbientLighting.vert  BasicLighting.vert  Default.vert  Fragment.txt  PosColorLocalTransform.vert  PosColorWorldTransform.vert  PosOnlyWorldTransform.vert  Vertex.txt
VS_Source/Dungeons3D/Source/: BaseView.cpp  BaseView.h  Camera.cpp  Camera.h  CameraView.cpp  CameraView.h  EventMessage.cpp  EventMessage.h  GLHeaders.h  GLMesh.cpp  GLMesh.h  GameEngine.cpp  GimbalView.cpp  GimbalView.h  GraphicsSystem.cpp  GraphicsSystem.h  IEventMessage.cpp  IEventMessage.h  IShaderManager.cpp  IShaderManager.h  IView.cpp  IView.h  LightsView.cpp  LightsView.h  Loader.cpp  Loader.h  Loader3DS.cpp  Math.h  Matrix.cpp  Matrix.h  MatrixStack.cpp  MatrixStack.h  Mesh.cpp  Mesh.h  MeshData.h  MessageKeyboard.h  MessageMouse.h  MessageMouseClick.h  MessagingSystem.cpp  MessagingSystem.h  (+21 more)
resource/Meshes/: LargeGimbal.mesh  MediumGimbal.mesh  Treetop.mesh  UnitCone.mesh  UnitCube.mesh  UnitCylinder.mesh
resource/Meshes/Scripts/: GenCone.py  GenCylinder.py
resource/Shaders/: BasicLighting.vert  PosColorLocalTransform.vert  PosColorWorldTransform.vert  PosOnlyWorldTransform.vert
src/: BaseSystem.h  BaseView.cpp  BaseView.h  CMakeLists.txt  Camera.cpp  Camera.h  ChunkNames3DS.h  EventMessages.h  GLHeaders.h  GameEngine.cpp  GameEngine.h  GimbalView.cpp  GraphicsSystem.h  LightsView.cpp  Loader.cpp  Loader3DS.h  Math.h  Matrix.cpp  MessageKeyboard.h  MessageMouseMove.h  MessageMouseWheel.h  MessagingSystem.cpp  MessagingSystem.h  OpenGL.cpp  OpenGL.h  Orientation.cpp  Orientation.h  PantheonView.cpp  ShaderManager.cpp  ShaderManager.h  ShaderTypes.h  Vector.h  WinMain.cpp  WinSystem.cpp  WinSystem.h
